hmm.txt
language/main.c:13:22: error: implicit declaration of function 'hallo' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
    char *greeting = hallo("friday");
                     ^
language/main.c:13:22: note: did you mean 'hello'?
language/main.c:4:7: note: 'hello' declared here
char *hello(char *name)
      ^
language/main.c:13:11: warning: incompatible integer to pointer conversion initializing 'char *' with an expression of type 'int' [-Wint-conversion]
    char *greeting = hallo("friday");
          ^          ~~~~~~~~~~~~~~~
1 warning and 1 error generated.
